<resources>
    <string name="app_name">CloudNote</string>
    <string name="title">Cloud Notes</string>
    <string name="login_title">登陆云笔记</string>
    <string name="login">登陆</string>
    <string name="regeister_title">注册云笔记</string>
    <string name="regeiste">注册</string>
    <string name="username">用户名</string>
    <string name="hint_input_username">请输入用户名</string>
    <string name="password">密码</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_re_password">请重新输入密码</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="title_hint_search">请输入关键字查询</string>
    <string name="hint_input_content">请输入笔记内容</string>
    <string name="save_password">记住密码</string>
    <string name="login_auto">自动登录</string>
    <string name="delete_all_items">全部删除</string>
    <string name="after_update">修改后</string>

    <string name="text">Squid blog crucifix Marfa, consectetur vero placeat mixtape. Non seitan sriracha eu, do Banksy fashion axe cred qui vegan delectus consequat Helvetica mollit. XOXO gluten-free disrupt, gastropub officia cliche chillwave hella pop-up. Fixie swag raw denim, YOLO craft beer assumenda occupy veniam photo booth pug consectetur next level Portland tote bag +1. Mlkshk PBR aliquip placeat Wes Anderson.</string>
    <string name="context_menu">Context menu</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
