<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/b2"
    tools:context="com.example.administrator.cloudnote.LoginActivity">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title_tv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="11dp"
        android:textSize="@dimen/text_size"
        android:id="@+id/username_tv" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_et"
        android:layout_alignRight="@+id/username_tv"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/text_size"
        android:id="@+id/password_tv" />

    <EditText
        android:selectAllOnFocus="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/hint_input_password"
        android:layout_below="@+id/username_et"
        android:layout_alignLeft="@+id/username_et"
        android:layout_alignStart="@+id/username_et"
        android:id="@+id/password_et" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/login_btn"
        android:layout_alignRight="@+id/password_et"
        android:layout_alignEnd="@+id/password_et"
        android:id="@+id/regeister_btn"
        android:text="@string/regeiste"
        android:ems="5" />

    <EditText
        android:selectAllOnFocus="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="@dimen/text_size"
        android:hint="@string/hint_input_username"
        android:maxLength="35"
        android:id="@+id/username_et"
        android:layout_below="@+id/login_title_tv"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/big_text_size"
        android:id="@+id/login_title_tv"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:id="@+id/login_btn"
        android:textSize="@dimen/text_size"
        android:text="@string/login"
        android:ems="5"
        android:layout_below="@+id/password_et"
        android:layout_alignLeft="@+id/password_tv"
        android:layout_alignStart="@+id/password_tv"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_pwd_cb"
        android:layout_below="@+id/password_et"
        android:text="@string/save_password"
        android:layout_alignLeft="@+id/password_et"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_auto_cb"
        android:layout_below="@+id/password_et"
        android:text="@string/login_auto"
        android:layout_alignRight="@+id/password_et"/>

</RelativeLayout>
