<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_history_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.cloudnote.ShowHistoryItemActivity">


    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/before_title_tv"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/title_color"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>
    <TextView
        android:text="auther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auther_tv"
        android:layout_below="@id/title_et"
        android:layout_alignParentRight="true"
        />
    <TextView
        android:text="1997-08-31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auther_tv"
        android:layout_alignParentRight="true"
        android:id="@+id/time_tv"/>
    <TextView
        android:text="conshdhhfdgshfhsdjfjrhgjdsngfjrhgufdnvgrhgurhdgufhuvrhvudhvuhrufhdjshfudhhcvuencvuhuvruvbdfninrifhidsnfidnif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_below="@+id/time_tv"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:gravity="center"
        android:id="@+id/before_content_tv"/>

    <View  android:layout_height="10px"
           android:id="@+id/divide"
           android:layout_width="match_parent"
           android:background="#66CCFF"
           android:layout_below="@+id/before_content_tv"
           android:layout_marginTop="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@+id/divide"
        android:id="@+id/linearlayout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/after_update"
            android:id="@+id/after_update_tv"
            android:layout_gravity="center"/>
    </LinearLayout>


    <EditText
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/after_title_et"
        android:textSize="@dimen/big_text_size"
        android:textColor="@color/title_color"
        android:layout_below="@+id/linearlayout"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>
    <EditText
        android:text="conshdhhfdgshfhsdjfjrhgjdsngfjrhgufdnvgrhgurhdgufhuvrhvudhvuhrufhdjshfudhhcvuencvuhuvruvbdfninrifhidsnfidnif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_below="@+id/after_title_et"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:hint="@string/hint_input_content"
        android:gravity="center"
        android:id="@+id/after_content_et"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_ibtn"
        android:layout_below="@id/after_content_et"
        android:src="@android:drawable/ic_menu_save"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
